<resources>
    <string name="app_name">StappenplanAppAccessible</string>
    <string name="stappenplannen">Stappenplannen</string>
    <string name="stappen">Stappen</string>
    <string name="naamStappenplan">Naam van stappenplan</string>
    <string name="beschrijvingStappenplan">Beschrijving</string>
    <string name="terug">Terug</string>
    <string name="bevestig">Bewaar</string>
    <string name="edit">Wijzig plan</string>
    <string name="uitlegStap">Beschrijf de stap:</string>
    <string name="naamStap">Geef de stap een naam:</string>
    <string name="stapNummer">De hoeveelste stap is dit?</string>
    <string name="tipBijNummer">Indien je dit vak leeg laat of de waarde 0 geeft, dan wordt het automatisch de laatste stap.</string>
    <string name="image">Voeg een foto toe</string>
    <string name="kiesImage">Kies een foto</string>
    <string name="video">Voeg video toe</string>
    <string name="kiesVideo">Kies een video</string>
    <string name="upload">Upload foto</string>
    <string name="uploadvid">Upload video</string>
    <string name="kiesAudio">Kies een audiofragment</string>
    <string name="uploadAudio">Upload audio</string>
    <string name="video_text">Video\'s</string>
    <string name="image_text">Afbeeldingen</string>
    <string name="home">Home</string>
    <string name="jouw_stappenplannen">Jouw stappenplannen</string>
    <string name="maak_stappenplan">Creëer een stappenplan</string>

    <!-- Content Description -->
    <string name="btn_to_stappenplannen">Ga naar jouw lijst van stappenplannen</string>
    <string name="btn_to_create_stappenplan">Creëer een nieuw stappenplan</string>
    <string name="image_content_describtion">Dit is een afbeelding die is toegevoegd als extra middel om een stap succesvol te voltooien</string>
    <string name="back_to">Keer terug naar vorig scherm</string>
    <string name="accept">Bewaar de wijzigingen en keer terug naar vorig scherm</string>
    <string name="delete">Verwijder</string>
    <string name="loading">Video is aan het laden</string>
    <string name="reset_stappen">Reset stappen</string>
    <string name="nieuwe_stap">Nieuwe stap</string>
    <string name="wijzig">Ga naar het scherm om zaken aan te passen</string>
    <string name="wijzig_stap">Ga naar het scherm om de stap aan te passen</string>
    <string name="verwijder_stap">Verwijder deze stap</string>
    <string name="verwijder_stap_title">Verwijder stap</string>
    <string name="wijzig_stappenplan">Wijzig dit stappenplan</string>
    <string name="verwijder_stappenplan_title">Verwijder stappenplan</string>
    <string name="verwijder_stappenplan">Verwijder dit stappenplan</string>
    <string name="delete_image">Verwijder deze afbeelding</string>
    <string name="delete_image_title">Verwijder</string>
    <string name="delete_video_title">Verwijder video</string>
    <string name="delete_video">Verwijder deze video</string>
    <string name="annuleer">Annuleer</string>
    <string name="verwijder">Verwijder plan</string>
    <string name="icon">Icoon</string>
    <string name="doorgaan">Doorgaan</string>
    <string name="image_text_name">Geef deze afbeelding een naam:</string>
    <string name="image_text_alt">Geef uitleg over de afbeelding:</string>
    <string name="video_text_name">Geef deze video een naam:</string>
    <string name="fill_in">Vul dit in om verder te gaan</string>
    <string name="fill_name">Geef hier een naam in</string>
    <string name="fill_description">Geef hier wat uitleg over de afbeelding</string>
    <string name="all_required">* De bovenstaande velden zijn verplicht in te vullen</string>
    <string name="all_required_video">* Een video moet een naam hebben</string>
    <string name="add_volgnummer" >Geef hier het gewenste volgnummer van een stap in. Op deze manier zullen de stappen in een juiste volgorde staan.</string>
    <string name="add_description">Geef hier wat meer uitleg bij de stap.</string>
    <string name="add_stap_name">Geef hier de stap een betekenisvolle naam</string>
    <string name="add_photo">Klik hier om naar je fotogalerij te gaan</string>
    <string name="add_video">Klik hier om een video te kiezen die je kunt toevoegen aan deze stap</string>
    <string name="add_description_to_plan">Geef hier wat meer uitleg over dit stappenplan</string>
    <string name="add_name">Geef hier een betekenisvolle naam aan jouw stappenplan</string>
    <string name="delete_anyways">Doorgaan met verwijderen</string>
    <string name="cancel_delete">Annuleer het verwijderen</string>
    <string name="cancel_add_video">Annuleer en verlaat het scherm om een video toe te voegen</string>
    <string name="cancel_add_image">Annuleer en verlaat het scherm om een afbeelding toe te voegen</string>
    <string name="go_add_foto">Doorgaan met het toevoegen van de afbeelding</string>
    <string name="nieuw_stappenplan">Nieuw plan</string>
    <string name="edit_stap">Wijzig stap</string>

</resources>
