<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/my_button_three"
    android:orientation="vertical"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <TextView
        android:id="@+id/dialog_image_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_in"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/image_text_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10dp"
        android:hint="@string/fill_name"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/edit_text_border"
        android:id="@+id/image_edit_naam"
        android:focusable="true"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/image_text_alt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:hint="@string/fill_description"
        android:background="@drawable/edit_text_border"
        android:gravity="top|start"
        android:padding="10dp"
        android:lines="4"
        android:minLines="3"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/image_edit_alt"
        android:focusable="true"/>

    <TextView
        android:id="@+id/error_message_image_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRedAccent"
        android:textSize="18sp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/dialog_button_ok"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/doorgaan"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/my_button_two"
        android:focusable="true"
        android:contentDescription="@string/doorgaan"/>

    <Button
        android:id="@+id/dialog_button_annuleer_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/my_button_one"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/annuleer"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_margin="10dp"
        android:focusable="true"
        android:contentDescription="@string/cancel_add_image"/>

</LinearLayout>
